--- a/WEBPAGE.html
+++ b/WEBPAGE.html
@@ -238,7 +238,7 @@ body, html {
     <div class="w3-center m3">
       <img src="https://raw.githubusercontent.com/LordUnicorn31/KujoStudios/master/Source/Resources/gui/logo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Game logo">
     </div>
-  <p class="w3-center"><em>In a distant future, your space expedition doesn't go as planned.<br></em> Game trailer</p><br>
+  <p class="w3-center"><em>In a distant future, your space expedition doesn't go as planned.<br></em> Game trailer:</p>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
