--- a/WEBPAGE.html
+++ b/WEBPAGE.html
@@ -93,7 +93,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT US</h3>
   <p class="w3-center"><em>"Good Grief!"</em></p>
-  <p>Kujo Studios is a small developer team created by students from CITM's Bachelor's degree in Video Game Design and Development, currently developing an RTS game for "Project II" subject.</p>
+  <p>Kujo Studios is a small developer team created by students from <a href="https://www.citm.upc.edu/" title="UPC CITM TTC" target="_blank" class="w3-hover-text-green">CITM</a>'s <a href="https://www.citm.upc.edu/ing/estudis/graus-videojocs/" title="Course Link" target="_blank" class="w3-hover-text-green">Bachelor's degree in Video Game Design and Development</a>, currently developing an RTS game for "Project II" subject.</p>
       
 	  <!-- ONE USER -->
     <div class="w3-row">
@@ -247,7 +247,7 @@ body, html {
 
   <div class="w3-row-padding w3-center w3-section">
 
-	<iframe width="420" height="315"
+	<iframe width="420" height="315" class="w3-center
         src="https://www.youtube.com/embed/YOUTUBE_VIDEO_GOES_HERE">
     </iframe>
   </div>
