--- a/WEBPAGE.html
+++ b/WEBPAGE.html
@@ -246,8 +246,7 @@ body, html {
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
-
-	<iframe width="420" height="315" class="w3-center
+	<iframe width="420" height="315"
         src="https://www.youtube.com/embed/YOUTUBE_VIDEO_GOES_HERE">
     </iframe>
   </div>
