--- a/WEBPAGE.html
+++ b/WEBPAGE.html
@@ -213,15 +213,15 @@ body, html {
   <p class="w3-large w3-center w3-padding-16">Project Participation:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Design</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-red w3-center" style="width:25%"> </div>
+    <div class="w3-container w3-padding-small w3-yellow w3-center" style="width:40%"> </div>
   </div>
   <p class="w3-wide"><i class="fa fa-laptop"></i>Programming</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-green w3-center" style="width:75%"> </div>
+    <div class="w3-container w3-padding-small w3-yellow w3-center" style="width:50%"> </div>
   </div>
   <p class="w3-wide"><i class="fa fa-photo"></i>Art</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-blue w3-center" style="width:80%"> </div>
+    <div class="w3-container w3-padding-small w3-blue w3-center" style="width:90%"> </div>
   </div>
 		<!-- END USER -->
 </div>
